--- a/source/_posts/2020-04-02-mouth.markdown
+++ b/source/_posts/2020-04-02-mouth.markdown
@@ -16,7 +16,9 @@ tags:
 <div style="width: 100%;height: 400px;">
     <iframe src="//player.youku.com/embed/XNzA2NDM1MTg4==?client_id=d0b1b77a17cded3b" width="100%" height="100%" frameborder="0" allowfullscreen="true"></iframe>
 </div> 
+
 *来自Annosoft公司的AutoLip-Sync语音-嘴唇动画*
+
 <br>
 
 
@@ -204,11 +206,9 @@ public static void FindLocalLargestPeaks(float[] data, float[] peakValue, int[] 
 
 最后的效果就是下面展示的视频所示:
 
-<div style="width: 100%;height: 400px;">
-      <iframe src="//player.bilibili.com/player.html?aid=497979009&bvid=BV1BK411578P&cid=184441588&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true">
-      <p>Your user agent does not support the HTML5 Video element.</p>
-</div>
+<iframe src="//player.bilibili.com/player.html?aid=497979009&bvid=BV1BK411578P&cid=184441588&page=1" scrolling="no" border="0" width="680" height="500" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 
+<br>
 
 ## 神经网络提取音素
 
