--- a/source/_posts/2020-04-02-mouth.markdown
+++ b/source/_posts/2020-04-02-mouth.markdown
@@ -220,6 +220,15 @@ public static void FindLocalLargestPeaks(float[] data, float[] peakValue, int[] 
 
 作者体验下来， 这套系统对日语有很好的的支持， 但对中文支持的却并不是那么的友好，分析下来发现， 日语之所以表现良好， 是因为元音的个数只有五个，非常的少。 普通话有三十九个韵母。韵母主要由元音构百成，也有的由元音加鼻辅音构成。韵母按结构可分单元音韵母、复元音韵母和带鼻音韵母三度类。单元音韵母由单元音构成，有a、o、e、ê、i、u、ü、问-i[¹](前i)和-i[ι](后i)、er等十个；复元答音韵母由复元音构成版，有ai、ei、ao、ou、ia、ie、ua、uo、üe、iao、iou、uai、uei等十三个， 因此汉语的发音更加复杂， 使用同样的算法，支持的就差一些。
 
+#### 优化
+
+[代码][i11]里实际上取得是近似第一共振峰F1, 内存的参数实际上参考了[一种基于共振峰分析的语音驱动人脸动画方法][i3]论文里的数据， 实际上男、女的元音区间对应的频率还是一些小的差别， 读者可以根据下面的表格数据，进一步优化模型。
+
+![](/img/post-vr/mou8.jpg)
+
+还有对第一共振峰F1的判定算法是找一个递增的峰值，且其下一个峰值的不高于记录的峰值，即判定为F1， 实际上有可能这两个峰值都不是F1，后面还会实现线性预测技术(LPC)、倒谱法来求峰值， 并对比数据和效果以实现更一步的优化。
+
+
 ## 神经网络提取音素
 
 我们的想法很直接，就是基于音频生成口型动画，或者说，输入是一段音频，经过我们的系统，输出为相应的口型动画。而如果先忽略音频和动画的时序，问题就变成了将音频关键帧经过一个深度神经网络，得到一个口型关键帧。
