--- a/source/_posts/2018-01-23-ptr.markdown
+++ b/source/_posts/2018-01-23-ptr.markdown
@@ -25,7 +25,7 @@ void Function()
 }
 ```
 
-在函数遇到错误之后，一般会抛异常，或者返回，但是这时很可能遗漏之前申请的资源，及时是很有经验的程序员也有可能出现这种错误，而使用auto_ptr会在自己的析够函数中进行资源释放。也就是所说的RAII
+在函数遇到错误之后，一般会抛异常，或者返回，但是这时很可能遗漏之前申请的资源，即使是很有经验的程序员也有可能出现这种错误，而使用auto_ptr会在自己的析够函数中进行资源释放。也就是所说的RAII
 
 使用auto_ptr代码如下
 
