--- a/source/_posts/2019-12-25-asset.markdown
+++ b/source/_posts/2019-12-25-asset.markdown
@@ -209,10 +209,51 @@ unitystudio [源码地址][i7]
 
 ![材质不带instance](/img/post-unity/im11.jpg)
 
-类似的工具还有：
+
+## WebExtract & Binary2Text
+
+AssetBundle对于大家来说会是一个黑盒子，其实在Unity的安装目录下有WebExtract & Binary2Text这二个工具，可以帮你把AssetBundle这个黑盒子打开。例如：升级版本AssetBundle变大了，二次构建AssetBundle出现差异了，AssetBundle内到底包含了哪些资源等。 
+对于构建出来的AssetBundle，我们先通过WebExtract来解开，这时候可以得到一个文件夹，里面包含着一些文件。
+
+```sh
+cd  /Applications/Unity/Unity.app/Contents/Tools
+ls -al
+```
+
+场景的AssetBundle解开为BuildPlayer-<SceneName>和BuildPlayer-<SceneName>.sharedAssets。普通的AssetBundle解开为一个CAB-<GUIDString>的文件。BuildPlayer-<SceneName>和CAB-<GUIDString>对应的就是Profiler里面Others/SerializedFile里面的名字。 
+
+当调用WebExtract工具的时候，控制台还打印出来了一些信息。这里需要注意的是Size的组成。Bundle的Size是有header的信和blocks数据块、额外的一些数据Data组成。
+
+Blocks根据不同的压缩方式会有不同的组织形式，譬如下图LZ4，它会产生三个压缩的Blocks，所以在读取资源的时候会先找到资源被压缩在哪个Blocks上，然后把Blocks解压并且Seek到对应位置去读对应的数据。而LZMA只有一个Block，需要把整个Blocks都解压后在读取对应的数据。
+
+![材质不带instance](/img/post-unity/im12.jpg)
+
+
+WebExtract解开的文件都是二进制文件，并不是明文，通过使用Binary2Text的工具可以把这些二进制文件直接反序列化成明文。
+
+-detailed这个参数可以让序列化出来的文本带上更多详细的信息，包括这个资源占用了大小是多少，哪些大哪些小。
+
+-hexfloat这个参数是把浮点数都以16进制的格式来输出，这样能够保证浮点精度的输出。我们曾经遇到过两次构建有差异的问题，通过WebExtract跟Binary2Text解开后发现文件还是一致的，但后面细查发现是因为float的输出的问题。所以加入了这个参数。
+
+```sh
+binary2text inputbinaryfile [outputfile] [-detailed] [-largebinaryhashonly] [-hexfloat]
+```
+
+解开后文本内不同资源需要关注的一些点：
+
+* Assetbundle块：记录着当前AB的Assets，而Asset又会有PreloadIndex以及PreloadSzie来定义如何能把Asset给组织起来
+* PreloadData块：当前AB的Assets的依赖的Asset资源
+* External References块：引用外部的Assetbundle的列表，m_FileID & m_PathID: m_FileID为0表示资源在当前包内，不为0所以引用这外部的资源。其ID值对应着External Referecnes的列表。m_PathID为当前包内的唯一ID
+* Material：可以确认其ShaderKeyword的数量是否是符合预期的，还可以看到ShaderProperty数值是否是正确
+* Texture：可以检查是否被重复打包了，其大小占用了多少
+* Shader：可以检查是否含有了默认的Standard 或者额外的变体，通过SubProgram的数量来大致判断一下是否符合变体组合的数量。另外还可以有编译后的二进制大小。这些都直接影响到项目中ShaderLab的内存占用
+* MonoScript: 我们脚本的关联，另外还会存有一些该脚本的一些数据
+
+#### 类似的工具还有：
 
 * disunity
 * UnityAssetsExplorer
+  
 
 ## 参考资料
 
@@ -230,3 +271,4 @@ unitystudio [源码地址][i7]
 [i5]: https://blog.uwa4d.com/archives/Loading_AnimationClip.html
 [i6]: https://github.com/huailiang/profile_proj
 [i7]: https://github.com/Perfare/AssetStudio
+[i8]: https://connect.unity.com/p/unite-2018-jie-xi-assetbundle
