--- a/source/_posts/2020-04-02-mouth.markdown
+++ b/source/_posts/2020-04-02-mouth.markdown
@@ -214,7 +214,10 @@ public static void FindLocalLargestPeaks(float[] data, float[] peakValue, int[] 
 
 最后的效果就是下面展示的视频所示:
 
-<iframe src="//player.bilibili.com/player.html?aid=497979009&bvid=BV1BK411578P&cid=184441588&page=1" scrolling="no" border="0" width="680" height="500" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+<iframe src="//player.bilibili.com/player.html?aid=497979009&bvid=BV1BK411578P&cid=184441588&page=1" scrolling="no" width="680" height="500" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+
+
+<iframe src="//player.bilibili.com/player.html?aid=287531324&bvid=BV1Qf4y1B7rW&cid=250890246&page=1" scrolling="no"  width="680" height="500"  frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 
 <br>
 
